# notes_taker_mcp

./: .gitignore  note_taker_mcp_server.py  pyproject.toml  requirements.txt  smithery.yaml
.well-known/: mcp-config
note_taker_mcp/: server.py
src/note_taker_mcp/: server.py
