[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "note-taker-mcp"
version = "0.1.0"
dependencies = [
    "mcp>=1.25.0",
    "smithery>=0.4.4",
]

[tool.smithery]
server = "note_taker_mcp.server:create_server"

[tool.hatch.build.targets.wheel]
packages = ["note_taker_mcp"]
